bunch of style changes

--- a/index.html
+++ b/index.html
@@ -264,14 +264,14 @@
    			<div id="folio-wrap" class="bricks-wrapper">					
 
    				<div class="brick folio-item">
-	               <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-shutterbug.jpg" data-sub-html="#01" > 	
+	               <div class="item-wrap animate-this" data-src="images/portfolio/gallery/1.jpg" data-sub-html="#01" > 	
 	                  <a href="#" class="overlay">
-	                  	<img src="images/portfolio/shutterbug.jpg" alt="Skaterboy">	                     
+	                  	<img src="images/portfolio/1.jpg" alt="Skaterboy">	                     
 	                     <div class="item-text">
 	                     	<span class="folio-types">
-		     					      Web Development
+		     					      Sharpening
 		     					   </span>
-		     					   <h3 class="folio-title">Shutterbug</h3>	     					   
+		     					   <h3 class="folio-title">Wheel</h3>	     					   
 		     					</div>                                        
 	                  </a>
 	                  <a href="https://www.behance.net/" class='details-link' title="details">
@@ -280,21 +280,21 @@
 	               </div> <!-- end item-wrap -->
 						
 						<div id="01" class='hide'>
-							<h4>Shutterbug</h4>
-							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis nulla voluptate fugiat velit. <a href="https://www.behance.net/">Details</a></p>
+							<h4>Sharpening</h4>
+							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis nulla voluptate fugiat velit. <a href="https://www.google.net/">Details</a></p>
 						</div>
 	        		</div> <!-- end folio-item -->
 
 	        		<div class="brick folio-item">
-	               <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-yellowwall.jpg" data-sub-html="#02"> 	
+	               <div class="item-wrap animate-this" data-src="images/portfolio/gallery/2.jpg" data-sub-html="#02"> 	
 	                  <a href="#" class="overlay">
-	                  	<img src="images/portfolio/yellowwall.jpg" alt="Shutterbug">	                     
+	                  	<img src="images/portfolio/2.jpg" alt="Sharpening">	                     
 	                     <div class="item-text">
 	                     	<span class="folio-types">
-		     					      Marketing
+		     					      Sharpening
 		     					   </span>
-		     					   <h3 class="folio-title">Yellow Wall</h3>  	     					   
-		     					</div>                                        
+		     					   <h3 class="folio-title">Wheel</h3>	     					   
+		     					</div>                                       
 	                  </a>
 	                  <a href="https://www.behance.net/" class='details-link' title="details">
 	                  	<i class="icon-link"></i>
@@ -302,21 +302,21 @@
 	               </div> <!-- end item-wrap -->
 
 	               <div id="02" class='hide'>
-							<h4>Yellow Wall</h4>
+							<h4>Sharpening</h4>
 							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis nulla voluptate fugiat velit. <a href="https://www.behance.net/">Details</a></p>
 						</div>	               
 	        		</div> <!-- end folio-item -->
 
 	        		<div class="brick folio-item">
-	               <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-architecture.jpg" data-sub-html="#03" >   	
+	               <div class="item-wrap animate-this" data-src="images/portfolio/gallery/3.jpg" data-sub-html="#03" >   	
 	                  <a href="#" class="overlay">
-	                  	<img src="images/portfolio/architecture.jpg" alt="Explore">	                     
+	                  	<img src="images/portfolio/3.jpg" alt="Explore">	                     
 	                     <div class="item-text">	                     		     					    
-		     					   <span class="folio-types">
-		     					      Web Design
+	                     	<span class="folio-types">
+		     					      Sharpening
 		     					   </span>
-		     					   <h3 class="folio-title">Architecture</h3>
-		     					</div>                                        
+		     					   <h3 class="folio-title">Wheel</h3>	     					   
+		     					</div>                                      
 	                  </a>
 	                  <a href="https://www.behance.net/" class='details-link' title="details">
 	                  	<i class="icon-link"></i>
@@ -324,20 +324,20 @@
 	               </div> <!-- end item-wrap -->	
 
 	               <div id="03" class='hide'>
-							<h4>Architecture</h4>
+							<h4>Sharpening</h4>
 							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis nulla voluptate fugiat velit. <a href="https://www.behance.net/">Details</a></p>
 						</div>               
 	        		</div> <!-- end folio-item -->
 
 					<div class="brick folio-item">
-	               <div class="item-wrap animate-this"  data-src="images/portfolio/gallery/g-minimalismo.jpg"  data-sub-html="#04" >
+	               <div class="item-wrap animate-this"  data-src="images/portfolio/gallery/4.jpg"  data-sub-html="#04" >
 	                  <a href="#" class="overlay">
-	                  	<img src="images/portfolio/minimalismo.jpg" alt="Minimalismo">	                     
+	                  	<img src="images/portfolio/4.jpg" alt="Minimalismo">	                     
 	                     <div class="item-text">	     					    
-		     					   <span class="folio-types">
-		     					      Web Design
+	                     	<span class="folio-types">
+		     					      Sharpening
 		     					   </span>
-		     					   <h3 class="folio-title">Minimalismo</h3>
+		     					   <h3 class="folio-title">Wheel</h3>	     					   
 		     					</div>                                        
 	                  </a>
 	                  <a href="https://www.behance.net/" class='details-link' title="details">
@@ -346,20 +346,20 @@
 	               </div> <!-- end item-wrap -->
 
 	               <div id="04" class='hide'>
-							<h4>Minimalismo</h4>
+							<h4>Sharpening</h4>
 							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis nulla voluptate fugiat velit. <a href="https://www.behance.net/">Details</a></p>
 						</div>  	               
 	        		</div> <!-- end folio-item -->
 
 					<div class="brick folio-item">
-	               <div class="item-wrap animate-this"  data-src="images/portfolio/gallery/g-skaterboy.jpg"  data-sub-html="#05" >  	
+	               <div class="item-wrap animate-this"  data-src="images/portfolio/gallery/5.jpg"  data-sub-html="#05" >  	
 	                  <a href="#" class="overlay">
-	                  	<img src="images/portfolio/skaterboy.jpg" alt="Bicycle">	                     
+	                  	<img src="images/portfolio/5.jpg" alt="Bicycle">	                     
 	                     <div class="item-text">	     					    
-		     					   <span class="folio-types">
-		     					      Branding
+	                     	<span class="folio-types">
+		     					      Sharpening
 		     					   </span>
-		     					   <h3 class="folio-title">Skaterboy</h3>
+		     					   <h3 class="folio-title">Wheel</h3>	     					   
 		     					</div>                                        
 	                  </a>
 	                  <a href="https://www.behance.net/" class='details-link' title="details">
@@ -368,21 +368,21 @@
 	               </div> <!-- end item-wrap -->
 
 	               <div id="05" class='hide'>
-							<h4>Skaterboy</h4>
+							<h4>Sharpening</h4>
 							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis nulla voluptate fugiat velit. <a href="https://www.behance.net/">Details</a></p>
 						</div>	               
 	        		</div> <!-- end folio-item -->
 	           
 					<div class="brick folio-item">
-	               <div class="item-wrap animate-this"  data-src="images/portfolio/gallery/g-salad.jpg"  data-sub-html="#06">     	
+	               <div class="item-wrap animate-this"  data-src="images/portfolio/gallery/6.jpg"  data-sub-html="#06">     	
 	                  <a href="#" class="overlay">
-	                  	<img src="images/portfolio/salad.jpg" alt="Salad">	                     
+	                  	<img src="images/portfolio/6.jpg" alt="Salad">	                     
 	                     <div class="item-text">	     					    
-		     					   <span class="folio-types">
-		     					      Branding
+	                     	<span class="folio-types">
+		     					      Sharpening
 		     					   </span>
-		     					   <h3 class="folio-title">Salad</h3>
-		     					</div>                                        
+		     					   <h3 class="folio-title">Wheel</h3>	     					   
+		     					</div>                                       
 	                  </a>
 	                  <a href="https://www.behance.net/" class='details-link' title="details">
 	                  	<i class="icon-link"></i>
@@ -390,7 +390,7 @@
 	               </div> <!-- end item-wrap -->
 
 	               <div id="06" class='hide'>
-							<h4>Salad</h4>
+							<h4>Sharpening</h4>
 							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis nulla voluptate fugiat velit. <a href="www.behance.net">Details</a></p>
 						</div>	               
 	        		</div> <!-- end folio-item -->   				
@@ -469,7 +469,7 @@
    			<h3>Contact</h3>
    			<h1>Get In Touch.</h1>
 
-   			<p class="lead">Quisque velit nisi, pretium ut lacinia in, elementum id enim. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+   			<p class="lead">Quisque velit nisi, pretium ut lacinia in, elementum id enim. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
    		</div> 
    	</div> <!-- end section-intro -->
 
