--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 				<div class="intro">
 					<h3 class="animate-this">About Us</h3>
-	   			<p class="lead animate-this">We cut thought all the noise. Mobile knife sharping service covering the Denver Metro Area.</p>	
+	   			<p class="lead animate-this">We cut through all the noise. Mobile knife sharping service covering Metro Denver.</p>	
 				</div>   
 
    		</div> <!-- end col-full  -->
@@ -188,7 +188,7 @@
 	      		<span class="icon"><i class="icon-paint-brush"></i></span>            
 
 	            <div class="service-content">
-	            	<h3 class="h05">Branding</h3>
+	            	<h3 class="h05">Sharpening</h3>
 
 		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 	         		</p>	         		
@@ -201,7 +201,7 @@
 					<span class="icon"><i class="icon-earth"></i></span>                          
 
 	            <div class="service-content">	
-	            	<h3 class="h05">Web Design</h3>  
+	            	<h3 class="h05">Cutting</h3>  
 
 		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 	         		</p>	         		
@@ -214,7 +214,7 @@
 			   	<span class="icon"><i class="icon-lego-block"></i></span>		            
 
 	            <div class="service-content">
-	            	<h3 class="h05">Web Development</h3>
+	            	<h3 class="h05">Molding</h3>
 
 		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 	        			</p>
@@ -227,7 +227,7 @@
 					<span class="icon"><i class="icon-megaphone"></i></span>	              
 
 	            <div class="service-content">
-	            	<h3 class="h05">Marketing</h3>
+	            	<h3 class="h05">Chipping</h3>
 
 		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 	         		</p>	         		
@@ -420,9 +420,9 @@
 
                <li>
                   <p>
-                  Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-                  to do what you believe is great work. And the only way to do great work is to love what you do.
-                  If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+                  This is the sharpest knife I have ever used! Proin gravida nibh vel velit auctor aliquet.
+                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
+                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
                   </p> 
 
                   <div class="testimonial-author">
@@ -436,7 +436,7 @@
 
                <li>
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                   This is the sharpest knife I have ever used! Proin gravida nibh vel velit auctor aliquet.
                   Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
                   nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.    
                   </p>
@@ -533,28 +533,25 @@
          	<h5>Contact Information</h5>
 
          	<div class="cinfo">
-	   			<h6>Where to Find Us</h6>
+	   			<h6>Where to Find Us</h6> 
 	   			<p>
-	            	1600 Amphitheatre Parkway<br>
-	            	Mountain View, CA<br>
-	            	94043 US
+	            	126734 Mountain Dr<br>
+	            	Denver, CO<br>
+	            	80030 US
 	            </p>
 	   		</div> <!-- end cinfo -->
 
 	   		<div class="cinfo">
 	   			<h6>Email Us At</h6>
 	   			<p>
-	   				someone@infinitysite.com<br>
-				   	info@infinitysite.com			     
+	   				cut@5280mobileknifesharpening.com<br>		     
 				   </p>
 	   		</div> <!-- end cinfo -->
 
 	   		<div class="cinfo">
 	   			<h6>Call Us At</h6>
 	   			<p>
-	   				Phone: (+63) 555 1212<br>
-				   	Mobile: (+63) 555 0100<br>
-				     	Fax: (+63) 555 0101
+	   				Phone: (303) 720 8003<br>
 				   </p>
 	   		</div>
 
@@ -574,7 +571,7 @@
 
 	      	<div class="col-five tab-full footer-about">       
 
-	            <h4 class="h05">Infinity.</h4>
+	            <h4 class="h05">5280 Mobile Knife Sharpening.</h4>
 
 	            <p>Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt. Proin eget tortor risus.</p>	            
 
@@ -627,8 +624,8 @@
 
       		<div class="col-twelve">
 	      		<div class="copyright">
-		         	<span>© Copyright Infinity 2016.</span> 
-		         	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>		         	
+		         	<span>© Copyright 5280 Mobile Knife Sharpening 2020.</span> 
+		         	<!-- <span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>		 -->         	
 		         </div>		               
 	      	</div>
 
