--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
 
 			<ul class="header-social-list">
 	         <li>
-	         	<a href="#"><i class="fa fa-facebook-square"></i></a>
+	         	<a href="#"><i class="fab fa-facebook-square"></i></a>
 	         </li>
 	         <li>
-	         	<a href="#"><i class="fa fa-twitter"></i></a>
+	         	<a href="#"><i class="fab fa-twitter"></i></a>
 	         </li>
 	         <li>
-	         	<a href="#"><i class="fa fa-instagram"></i></a>
+	         	<a href="#"><i class="fab fa-instagram"></i></a>
 	         </li>
             <li>
-            	<a href="#"><i class="fa fa-behance"></i></a>
+            	<a href="#"><i class="fab fa-behance"></i></a>
             </li>
 	         <li>
-	         	<a href="#"><i class="fa fa-dribbble"></i></a>
+	         	<a href="#"><i class="fab fa-dribbble"></i></a>
 	         </li>	         
 	      </ul>		
 
@@ -113,23 +113,6 @@
 		   </div> <!-- end home-content-tablecell --> 		   
 		</div> <!-- end home-content-table -->
 
-		<ul class="home-social-list">
-	      <li class="animate-intro">
-	        	<a href="#"><i class="fa fa-facebook-square"></i></a>
-	      </li>
-	      <li class="animate-intro">
-	        	<a href="#"><i class="fa fa-twitter"></i></a>
-	      </li>
-	      <li class="animate-intro">
-	        	<a href="#"><i class="fa fa-instagram"></i></a>
-	      </li>
-         <li class="animate-intro">
-           	<a href="#"><i class="fa fa-behance"></i></a>
-         </li>
-	      <li class="animate-intro">
-	        	<a href="#"><i class="fa fa-dribbble"></i></a>
-	      </li>	      
-	   </ul> <!-- end home-social-list -->	
 
 		<div class="scrolldown">
 			<a href="#about" class="scroll-icon smoothscroll">		
@@ -649,6 +632,7 @@
    <script src="js/jquery-2.1.3.min.js"></script>
    <script src="js/plugins.js"></script>
    <script src="js/main.js"></script>
+   <script src="https://kit.fontawesome.com/ecf534eb51.js" crossorigin="anonymous"></script>
 
 </body>
 
