--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>5280 Mobile Knife Sharpening</title>
+	<title>Denver Mobile Knife Sharpening</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -52,7 +52,7 @@
 
 			<a href="#0" class="close-button" title="close"><span>Close</span></a>	
 
-	   	<h3>5280 Logo</h3>  
+	   	<h3>Denver Mobile Knife Sharpening</h3>  
 
 			<ul class="nav-list">
 				<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
@@ -96,7 +96,7 @@
 		   	<div class="row">
 		   		<div class="col-twelve">		   			
 			  		
-			  				<h3 class="animate-intro">5280 Mobile Knife Sharpening</h3>
+			  				<h3 class="animate-intro">Denver Mobile Knife Sharpening</h3>
 				  			<h1 class="animate-intro">
 							We Get Straight  <br>
 							To The Point.
@@ -527,7 +527,7 @@
 	   		<div class="cinfo">
 	   			<h6>Email Us At</h6>
 	   			<p>
-	   				cut@5280mobileknifesharpening.com<br>		     
+	   				cut@Denvermobileknifesharpening.com<br>		     
 				   </p>
 	   		</div> <!-- end cinfo -->
 
@@ -554,7 +554,7 @@
 
 	      	<div class="col-five tab-full footer-about">       
 
-	            <h4 class="h05">5280 Mobile Knife Sharpening.</h4>
+	            <h4 class="h05">Denver Mobile Knife Sharpening.</h4>
 
 	            <p>Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt. Proin eget tortor risus.</p>	            
 
@@ -607,7 +607,7 @@
 
       		<div class="col-twelve">
 	      		<div class="copyright">
-		         	<span>© Copyright 5280 Mobile Knife Sharpening 2020.</span> 
+		         	<span>© Copyright Denver Mobile Knife Sharpening 2020.</span> 
 		         	<!-- <span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>		 -->         	
 		         </div>		               
 	      	</div>
