lots of content changes

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 	            <div class="service-content">
 	            	<h3 class="h05">Sharpening</h3>
 
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+		            <p>Razor-sharp guaranteed.
 	         		</p>	         		
 	         	</div> 	         	 
 
@@ -182,9 +182,9 @@
 					<span class="icon"><i class="icon-earth"></i></span>                          
 
 	            <div class="service-content">	
-	            	<h3 class="h05">Cutting</h3>  
+	            	<h3 class="h05">Repairing</h3>  
 
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+		            <p>Tip, edge, chip and bent blade repair.
 	         		</p>	         		
 	            </div>	                          
 
@@ -195,9 +195,9 @@
 			   	<span class="icon"><i class="icon-lego-block"></i></span>		            
 
 	            <div class="service-content">
-	            	<h3 class="h05">Molding</h3>
+	            	<h3 class="h05">Re-profiling</h3>
 
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+		            <p>We can taylor your blades to your needs. 
 	        			</p>
 	            </div> 	            	               
 
@@ -208,9 +208,9 @@
 					<span class="icon"><i class="icon-megaphone"></i></span>	              
 
 	            <div class="service-content">
-	            	<h3 class="h05">Chipping</h3>
+	            	<h3 class="h05">Delivery</h3>
 
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+		            <p>We come to you, within 24 hours. 
 	         		</p>	         		
 	            </div>                
 
@@ -401,9 +401,7 @@
 
                <li>
                   <p>
-                  This is the sharpest knife I have ever used! Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+                  Outstanding service! This is the sharpest knife I have ever used!
                   </p> 
 
                   <div class="testimonial-author">
@@ -417,9 +415,7 @@
 
                <li>
                   <p>
-                   This is the sharpest knife I have ever used! Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.    
+                   This is the sharpest knife I have ever used!  
                   </p>
 
                	<div class="testimonial-author">
@@ -450,7 +446,7 @@
    			<h3>Contact</h3>
    			<h1>Get In Touch.</h1>
 
-   			<p class="lead">Quisque velit nisi, pretium ut lacinia in, elementum id enim. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+   			<p class="lead">Holidays, special occasions or need maintenance, we come to you.. Razor-sharp and ready to go. </p>
    		</div> 
    	</div> <!-- end section-intro -->
 
