--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
    			<h3>Contact</h3>
    			<h1>Get In Touch.</h1>
 
-   			<p class="lead">Holidays, special occasions or need maintenance, we come to you.. Razor-sharp and ready to go. </p>
+   			<p class="lead">Holidays, special occasions or need maintenance, we come to you. Razor-sharp and ready to go. </p>
    		</div> 
    	</div> <!-- end section-intro -->
 
