--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
    	<div class="header-logo">
 	      <a href="index.html">Denver Mobile Knife Sharpening</a>
 	   </div> 
-
+			<div class="main-icon"></div> 
 		<a id="header-menu-trigger" href="#0">
 		 	<span class="header-menu-text">Menu</span>
 		  	<span class="header-menu-icon"></span>
