--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 	<title>Denver Mobile Knife Sharpening</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 
    <!-- mobile specific metas
    ================================================== -->
