photo and content updates

--- a/index.html
+++ b/index.html
@@ -380,9 +380,49 @@
 							<h4>Sharpening</h4>
 							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis nulla voluptate fugiat velit. <a href="www.behance.net">Details</a></p>
 						</div>	               
-	        		</div> <!-- end folio-item -->   				
+	        		</div> <!-- end folio-item -->   		
+	        							<div class="brick folio-item">
+	               <div class="item-wrap animate-this"  data-src="images/portfolio/gallery/7.jpg"  data-sub-html="#07">     	
+	                  <a href="#" class="overlay">
+	                  	<img src="images/portfolio/7.jpg" alt="Salad">	                     
+	                     <div class="item-text">	     					    
+	                     	<span class="folio-types">
+		     					      Sharpening
+		     					   </span>
+		     					   <h3 class="folio-title">Wheel</h3>	     					   
+		     					</div>                                       
+	                  </a>
+	                  <a href="https://www.behance.net/" class='details-link' title="details">
+	                  	<i class="icon-link"></i>
+	                  </a>
+	               </div> <!-- end item-wrap -->
 
-   			</div> <!-- end folio-wrap -->
+	               <div id="06" class='hide'>
+							<h4>Sharpening</h4>
+							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis nulla voluptate fugiat velit. <a href="www.behance.net">Details</a></p>
+						</div>	               
+	        		</div> <!-- end folio-item -->   
+	        							<div class="brick folio-item">
+	               <div class="item-wrap animate-this"  data-src="images/portfolio/gallery/8.jpg"  data-sub-html="#08">     	
+	                  <a href="#" class="overlay">
+	                  	<img src="images/portfolio/8.jpg" alt="Salad">	                     
+	                     <div class="item-text">	     					    
+	                     	<span class="folio-types">
+		     					      Sharpening
+		     					   </span>
+		     					   <h3 class="folio-title">Wheel</h3>	     					   
+		     					</div>                                       
+	                  </a>
+	                  <a href="https://www.behance.net/" class='details-link' title="details">
+	                  	<i class="icon-link"></i>
+	                  </a>
+	               </div> <!-- end item-wrap -->
+
+	               <div id="06" class='hide'>
+							<h4>Sharpening</h4>
+							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis nulla voluptate fugiat velit. <a href="www.behance.net">Details</a></p>
+						</div>	               
+	        		</div> <!-- end folio-item -->   		
    		</div> <!-- end twelve -->
    	</div> <!-- end portfolio-content -->   	
 
