--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
       		<div class="col-twelve">
 	      		<div class="copyright">
 		         	<span>© Copyright Denver Mobile Knife Sharpening 2020.</span> 
-		         	<!-- <span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>		 -->         	
+		         	<span>Designed by <a href="http://heymagruder.com/">heymagruder</a></span>       	
 		         </div>		               
 	      	</div>
 
