lots more content updates

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
 				<li><a class="smoothscroll" href="#about" title="">About</a></li>
 				<li><a class="smoothscroll" href="#services" title="">Services</a></li>
-				<li><a class="smoothscroll" href="#portfolio" title="">Works</a></li>
+				<li><a class="smoothscroll" href="#portfolio" title="">Showcase</a></li>
 				<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>						
 			</ul>			
 
@@ -326,7 +326,7 @@
 
                <li>
                   <p>
-                  Outstanding service! This is the sharpest knife I have ever used!
+                  I couldn’t believe how easy and affordable it was. And best of all, my knives are sharper than the day I bought them!
                   </p> 
 
                   <div class="testimonial-author">
@@ -340,7 +340,7 @@
 
                <li>
                   <p>
-                   This is the sharpest knife I have ever used!  
+                   I never knew how a knife should feel until Mike and his team worked their magic. Now l call them to sharpen and reprofile my knives out of the box. 
                   </p>
 
                	<div class="testimonial-author">
@@ -367,11 +367,11 @@
       <div class="overlay"></div>
 
 		<div class="row narrow section-intro with-bottom-sep animate-this">
-   		<div class="col-twelve">
+   		<div class="col-tweleve">
    			<h3>Contact</h3>
    			<h1>Ready to Grind?</h1>
 
-   			<p class="lead">Preparing for the holidays or a special occasion? Need a tune-up? Send us a message and we’ll be at your doorstep before you <br>can say “mag-knife-icent.”</p>
+   			<p class="lead">Preparing for the holidays or a special occasion? Need a tune-up? Send us a message and we’ll be at your doorstep before you can say “mag-knife-icent.”</p>
    		</div> 
    	</div> <!-- end section-intro -->
 
@@ -444,16 +444,16 @@
 	   		</div> <!-- end cinfo -->
 
 	   		<div class="cinfo">
-	   			<h6>Email Us At</h6>
+	   			<h6>Email Us</h6>
 	   			<p>
 	   				cut@Denvermobileknifesharpening.com<br>		     
 				   </p>
 	   		</div> <!-- end cinfo -->
 
 	   		<div class="cinfo">
-	   			<h6>Call Us At</h6>
+	   			<h6>Call Us</h6>
 	   			<p>
-	   				Phone: (303) 720 8003<br>
+	   				(303) 720 8003<br>
 				   </p>
 	   		</div>
 
@@ -475,7 +475,7 @@
 
 	            <h4 class="h05">Denver Mobile Knife Sharpening.</h4>
 
-	            <p>Let's addd something here for SEO.</p>	            
+	            <p>Same-day sharpening, repairs, and more, at your doorstep.</p>	            
 
 		      </div> <!-- end footer-about -->
 
