content updates, remove contact form
added in Square Appointments button

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
                <li>
                   <p>
-                   I never knew how a knife should feel until Mike and his team worked their magic. Now l call them to sharpen and reprofile my knives out of the box. 
+                   I never knew how a knife should feel until Mike and his team worked their magic. Now I call them to sharpen and reprofile my knives out of the box. 
                   </p>
 
                	<div class="testimonial-author">
@@ -377,60 +377,15 @@
 
    	<div class="row contact-content">
 
-   		<div class="col-seven tab-full animate-this">
+   		<div class="col-twelve tab-full animate-this">
 
-   			<h5>Send Us A Message</h5>
+   			<!-- Start Square Appointments Embed code --> <a target="_top" style=" background-color: #ebb024; color: white; height: 60px; text-transform: uppercase; font-family: 'Square Market', 'helvetica neue', helvetica, arial, sans-serif; letter-spacing: 1px; line-height: 60px; padding: 0 128px; border-radius: 3px; font-weight: 500; font-size: 20px; cursor: pointer; display: inline-block; " href="https://square.site/book/8C94XRBXYARHG/christopher-magruder" target="_blank" rel="nofollow">Schedule Today</a> <!-- End Square Appointments Embed code -->
 
-            <!-- form -->
-            <form name="contactForm" id="contactForm" method="post">     			
 
-               <div class="form-field">
- 					   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
-               </div>
-
-               <div class="row">
-                 	<div class="col-six tab-full">
-                 		<div class="form-field">
-                 			<input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
-                 		</div>		      			   
-		            </div>
-	            	<div class="col-six tab-full">	            
-	            		<div class="form-field">
-	            			<input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
-	                  </div>		     				   
-		            </div>
-               </div>
-                                         
-               <div class="form-field">
-	              	<textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required=""></textarea>
-	            </div> 
-
-               <div class="form-field">
-                  <button class="submitform">Submit</button>
-
-                  <div id="submit-loader">
-                     <div class="text-loader">Sending...</div>                             
-       			      <div class="s-loader">
-							  	<div class="bounce1"></div>
-							  	<div class="bounce2"></div>
-							  	<div class="bounce3"></div>
-							</div>
-						</div>
-               </div>
-
-      		</form> <!-- end form -->
-
-            <!-- contact-warning -->
-            <div id="message-warning"></div> 
-
-            <!-- contact-success -->
-      		<div id="message-success">
-               <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-      		</div>
-
-         </div> <!-- end col-seven --> 
-
-         <div class="col-four tab-full contact-info end animate-this">
+         </div> <!-- end col-tweleve --> 
+     </div> <!-- end row --> 
+   	<div class="row contact-content">
+         <div class="col-twelve tab-full contact-info end animate-this">
 
          	<h5>Contact Information</h5>
 
