--- a/index.html
+++ b/index.html
@@ -378,17 +378,15 @@
    	<div class="row contact-content">
 
    		<div class="col-twelve tab-full animate-this">
+   			<div class='schedule-code'>
 
    			<!-- Start Square Appointments Embed code --> <a target="_top" style=" background-color: #ebb024; color: white; height: 60px; text-transform: uppercase; font-family: 'Square Market', 'helvetica neue', helvetica, arial, sans-serif; letter-spacing: 1px; line-height: 60px; padding: 0 128px; border-radius: 3px; font-weight: 500; font-size: 20px; cursor: pointer; display: inline-block; " href="https://square.site/book/8C94XRBXYARHG/christopher-magruder" target="_blank" rel="nofollow">Schedule Today</a> <!-- End Square Appointments Embed code -->
-
+			</div>
 
          </div> <!-- end col-tweleve --> 
      </div> <!-- end row --> 
    	<div class="row contact-content">
-         <div class="col-twelve tab-full contact-info end animate-this">
-
-         	<h5>Contact Information</h5>
-
+         <div class="col-six tab-full contact-info end animate-this">
          	<div class="cinfo">
 	   			<h6>Where to Find Us</h6> 
 	   			<p>
@@ -397,22 +395,17 @@
 	            	80030 US
 	            </p>
 	   		</div> <!-- end cinfo -->
+         </div> <!-- end cinfo --> 
 
-	   		<div class="cinfo">
-	   			<h6>Email Us</h6>
-	   			<p>
-	   				cut@Denvermobileknifesharpening.com<br>		     
-				   </p>
+         <div class="col-six tab-full contact-info end animate-this">
+
+			<div class="cinfo">
+	   			<h6>Email & Phone</h6>
+	   			<p>cut@Denvermobileknifesharpening.com</p>
+	   				<p>(303) 720 8003</p>     
 	   		</div> <!-- end cinfo -->
 
-	   		<div class="cinfo">
-	   			<h6>Call Us</h6>
-	   			<p>
-	   				(303) 720 8003<br>
-				   </p>
-	   		</div>
-
-         </div> <!-- end cinfo --> 
+       	</div> <!-- end row contact-content -->     
 
    	</div> <!-- end row contact-content -->
 		
