--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
    	<div class="row">
    		<div class="col-twelve">
-   			<h2 class="animate-this">What They Say About Us.</h2>
+   			<h2 class="animate-this">What Denverites Are Saying About Us</h2>
    		</div>   		
    	</div>   	
 
