tweaks and content changes

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 
 			<ul class="nav-list">
 				<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
-				<li><a class="smoothscroll" href="#about" title="">About</a></li>
+				<li><a class="smoothscroll" href="#about" title="">How</a></li>
 				<li><a class="smoothscroll" href="#services" title="">Services</a></li>
 				<li><a class="smoothscroll" href="#portfolio" title="">Showcase</a></li>
-				<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>						
+				<li><a class="smoothscroll" href="#contact" title="">Book</a></li>						
 			</ul>			
 
 <!-- 			<ul class="header-social-list">
@@ -140,8 +140,8 @@
    			<div class="about-profile-bg"></div>
 
 				<div class="intro">
-					<h3 class="animate-this">About Us</h3>
-	   			<p class="lead animate-this">Welcome to Denver's most exclusive mobile knife sharping service. We provide white-glove services to ensure your cutlery stays razor-sharp and maintained year-round. </p>	
+					<h3 class="animate-this">How It Works</h3>
+	   			<p class="lead animate-this">Our team of experts will put your knives under the microscope and let you know exactly what they need. We sharpen, repair, reprofile, and more. Sit back and relax, we'll take it from here. </p>	
 				</div>   
 
    		</div> <!-- end col-full  -->
@@ -240,9 +240,7 @@
    		<div class="row narrow section-intro with-bottom-sep animate-this">
 	   		<div class="col-twelve">
 	   			<h3>Showcase</h3>
-		   		<h1>See Some of Our Work.</h1>  			
-		   		
-		   		<p class="lead">See some of our recent work......</p>	   			
+		   		<h1>See How Sharp We Are</h1>  						
 	   		</div>   		
 	   	</div> <!-- end row section-intro -->   		
 
@@ -388,7 +386,7 @@
    	<div class="row contact-content">
          <div class="col-six tab-full contact-info end animate-this">
          	<div class="cinfo">
-	   			<h6>Where to Find Us</h6> 
+	   			<h6>Address</h6> 
 	   			<p>
 	            	126734 Mountain Dr<br>
 	            	Denver, CO<br>
