--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
    		<div class="col-twelve tab-full animate-this">
    			<div class='schedule-code'>
-   				<!-- Start Square Appointments Embed code --> <a target="_top" style=" background-color: #ebb024; color: white; height: 60px; text-transform: uppercase; font-family: 'Square Market', 'helvetica neue', helvetica, arial, sans-serif; letter-spacing: 1px; line-height: 60px; padding: 0 80px; border-radius: 3px; font-weight: 500; font-size: 18px; cursor: pointer; display: inline-block; " href="https://square.site/book/8C94XRBXYARHG/christopher-magruder" target="_blank" rel="nofollow">Schedule Today</a> <!-- End Square Appointments Embed code -->
+   				<!-- Start Square Appointments Embed code --> <a target="_top" style=" background-color: #ebb024; color: white; height: 60px; text-transform: uppercase; font-family: 'Square Market', 'helvetica neue', helvetica, arial, sans-serif; letter-spacing: 1px; line-height: 60px; padding: 0 70px; border-radius: 3px; font-weight: 500; font-size: 18px; cursor: pointer; display: inline-block; " href="https://square.site/book/8C94XRBXYARHG/christopher-magruder" target="_blank" rel="nofollow">Book Us</a> <!-- End Square Appointments Embed code -->
 			</div>
 
          </div> <!-- end col-tweleve --> 
