content for phone

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
       <div class="overlay"></div>
 
 		<div class="row narrow section-intro with-bottom-sep animate-this">
-   		<div class="col-tweleve">
+   		<div class="col-tweleve grind">
    			<h3>Contact</h3>
    			<h1>Ready to Grind?</h1>
 
