--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
    		<div class="row narrow section-intro with-bottom-sep animate-this">
 	   		<div class="col-twelve">
 	   			<h3>Showcase</h3>
-		   		<h1>See How Sharp We Are</h1>  						
+		   		<h1>See How We Got So Sharp</h1>  						
 	   		</div>   		
 	   	</div> <!-- end row section-intro -->   		
 
